--- a/index.html
+++ b/index.html
@@ -361,9 +361,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://cloudstack12.github.io/peaceofmind4wellness.2/">https://cloudstack12.github.io/peaceofmind4wellness.2/</a><br>
+                <a target="_bLank" href="https://magenta-beijinho-b4ab21.netlify.app/">https://magenta-beijinho-b4ab21.netlify.app/</a><br>
+                <a target="_bLank" href="https://kherkroldanseo.s3.ap-northeast-1.amazonaws.com/peaceofmind4wellness.2/index.html">https://kherkroldanseo.s3.ap-northeast-1.amazonaws.com/peaceofmind4wellness.2/index.html</a><br>
             </section>
 
         </div>
